src/test/ui/slice-mut.stderr
error[E0308]: mismatched types
  --> $DIR/slice-mut.rs:17:22
   |
LL |     let y: &mut[_] = &x[2..4];
   |                      ^^^^^^^^ types differ in mutability
   |
   = note: expected type `&mut [_]`
              found type `&[isize]`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
